--- a/percolate-capstone/public/index.html
+++ b/percolate-capstone/public/index.html
@@ -10,7 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="stylesheet" href="./styles/style.css" />
-
+    <link rel="stylesheet" href="./styles/loginSignup.css" />
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
