--- a/percolate-capstone/public/index.html
+++ b/percolate-capstone/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="stylesheet" href="/styles/singleCoffee.css" />
+    <link rel="stylesheet" href="/styles/nav.css" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
