--- a/percolate-capstone/public/index.html
+++ b/percolate-capstone/public/index.html
@@ -9,14 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="stylesheet" href="/styles/singleCoffee.css" />
-    <link rel="stylesheet" href="/styles/nav.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/loginSignup.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Sofia"
-      rel="stylesheet"
-    />
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
