refactor navbar with login function incomplete

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/loginSignup.css" />
+    <link rel="stylesheet" href="./styles/singleUser.css" />
+
+
     <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Percolate</title>
   </head>
   <body>
