--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/loginSignup.css" />
-    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+    <link
+      href="https://fonts.googleapis.com/css?family=Sofia"
+      rel="stylesheet"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="./styles/addReview.css" />
     <!--
@@ -20,14 +23,16 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+
+    Notice the use of %PUBLIC_URL% in the tags above. It will be replaced with
+    the URL of the `public` folder during the build. Only files inside the
+    `public` folder can be referenced from the HTML.
     <link rel="stylesheet" href="./styles/singleUser.css" />
 
-
-    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+    <link
+      href="https://fonts.googleapis.com/css?family=Sofia"
+      rel="stylesheet"
+    />
     <title>Percolate</title>
   </head>
   <body>
