--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,20 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/loginSignup.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/loginSignup.css" />
+    <link rel="stylesheet" href="/styles/addReview.css" />
+    <link rel="stylesheet" href="/styles/singleUser.css" />
+    <link rel="stylesheet" href="/styles/singleCoffee.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Sofia"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Sofia"
       rel="stylesheet"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="stylesheet" href="./styles/addReview.css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,12 +33,7 @@
     Notice the use of %PUBLIC_URL% in the tags above. It will be replaced with
     the URL of the `public` folder during the build. Only files inside the
     `public` folder can be referenced from the HTML.
-    <link rel="stylesheet" href="./styles/singleUser.css" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Sofia"
-      rel="stylesheet"
-    />
     <title>Percolate</title>
   </head>
   <body>
