--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="stylesheet" href="/styles/loginSignup.css" />
     <link rel="stylesheet" href="/styles/addReview.css" />
+    <link rel="stylesheet" href="/styles/reviewList.css" />
     <link rel="stylesheet" href="/styles/singleUser.css" />
     <link rel="stylesheet" href="/styles/singleBusiness.css" />
     <link rel="stylesheet" href="/styles/singleCoffee.css" />
