added basic like button

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/styles/singleUser.css" />
     <link rel="stylesheet" href="/styles/singleBusiness.css" />
     <link rel="stylesheet" href="/styles/singleCoffee.css" />
+    <link rel="stylesheet" href="/styles/likeButton.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Sofia"
       rel="stylesheet"
