--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/styles/singleBusiness.css" />
     <link rel="stylesheet" href="/styles/singleCoffee.css" />
     <link rel="stylesheet" href="/styles/likeButton.css" />
+    <link rel="stylesheet" href="/styles/about.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Sofia"
       rel="stylesheet"
