--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,7 @@
     <link rel="stylesheet" href="/styles/singleCoffee.css" />
     <link rel="stylesheet" href="/styles/likeButton.css" />
     <link rel="stylesheet" href="/styles/about.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Sofia"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css?family=Sofia"
       rel="stylesheet"
