--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       href="https://fonts.googleapis.com/css?family=Sofia"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Percolate</title>
   </head>
